manifest/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-container
  namespace: nabilahsafa-dev
  labels:
    app: my-container
spec:
  # Satu Pod cukup untuk latihan; jumlahnya dapat dinaikkan nanti.
  replicas: 1
  selector:
    matchLabels:
      bootcamp: its-mlpt

  template:
    metadata:
      labels:
        bootcamp: its-mlpt
    spec:
      containers:
        - name: my-container
          image: image-registry.openshift-image-registry.svc:5000/nabilahsafa-dev/image-name:1.3.0
          imagePullPolicy: Always
          # D2: nilai dari ConfigMap/Secret menjadi environment variable Python.
          ports:
            - containerPort: 8000
              protocol: TCP
