manifest/profiling.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: profiling
  namespace: nabilahsafa-dev
  labels:
    app: profiling
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profiling
  template:
    metadata:
      labels:
        app: profiling
        bootcamp: its-mlpt-profiling
    spec:
      containers:
      - name: profiling
        image: image-registry.openshift-image-registry.svc:5000/nabilahsafa-dev/profiling:1.3.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8000
          timeoutSeconds: 12
          periodSeconds: 15
        startupProbe:
          httpGet:
            path: /health/live
            port: 8000
          failureThreshold: 30
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: profiling
  namespace: nabilahsafa-dev
spec:
  selector:
    app: profiling
  ports:
  - port: 8000
    targetPort: 8000
