manifest/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-container
  namespace: nabilahsafa-dev
  labels:
    app: my-container
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    bootcamp: its-mlpt
